# Databricks-MCP-Server

./: .cursor.json  .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  check_run_status.py  debug_mcp_auth.py  discrepancy_analysis.md  pyproject.toml  start_mcp_server.ps1  start_mcp_server.sh  test_notebook_run.py
examples/: command_execution_example.py  direct_usage.py  mcp_client_usage.py  submit_notebook_run_example.py
scripts/: run_client_test.ps1  run_direct_test.ps1  run_direct_test.sh  run_list_tools.ps1  run_list_tools.sh  run_mcp_client_test.ps1  run_mcp_client_test.sh  run_mcp_test.ps1  run_tests.ps1  show_clusters.py  show_notebooks.py  start_mcp_server.ps1  start_mcp_server.sh  test_mcp_server.ps1
src/: __main__.py  main.py
src/api/: __init__.py  clusters.py  command_execution.py  dbfs.py  jobs.py  notebooks.py  sql.py
src/cli/: __init__.py  commands.py
src/core/: auth.py  config.py  utils.py
src/server/: __main__.py  app.py  databricks_mcp_server.py
tests/: test_clusters.py  test_command_execution.py  test_direct.py  test_mcp_client.py  test_mcp_server.py  test_submit_notebook_run.py  test_tools.py
